CLDR-18001 site: fix gap on right side of .navBar

--- a/docs/site/assets/css/page.css
+++ b/docs/site/assets/css/page.css
@@ -787,7 +787,7 @@ body.page .subpages a.hasChildren:after {
   color: black;
   top: 0.5em;
   left: 0.5em;
-  margin: 0em 1em 0em 0em;
+  margin: 0em;
   padding: 0.3em;
   max-width: 30%;
   border: 1pt solid #99f;
